# Coffee

./: .gitignore  Readme.md  Todo.md
ADT/: Readme.md
ADT/ADT Adder/: ADT_Adder.sln  ADT_Adder.vcproj  AssemblyInfo.cpp  Form1.h  Form1.resX  ReadMe.txt  app.rc  stdafx.cpp
ADT/ADT Position/: ADTPos.au3
ADT/AllOcean/: AllOcean_3.0.cpp
ADT/CoverWithWater/: CoverWithWater.cpp
ADT/CreateWDT/: CreateWDT_Cryect.cpp  CreateWDT_Schlumpf.cpp
ADT/FileInfo/: FileInfo_Cryect.cpp  FileInfo_Schlumpf.cpp
ADT/FixAllOcean/: FixAllOcean_3.0_Alt.cpp
ADT/GetSlopePicture/: GetSlopePicture.cpp
ADT/LoadInfo/: LoadInfo_Cryect.cpp  LoadInfo_Schlumpf.cpp
ADT/MakeMap/: MakeMap_Cryect.cpp
ADT/MapMover/: MapMover_Cryect.cpp
ADT/OffsetFix/: OffsetFix_Schulmpf.cpp
ADT/OffsetZ/: OffsetZ.cpp
ADT/RaiseTerrain/: RaiseTerrain.cpp  RaiseTerrain_Alt.cpp
ADT/RemoveTheWalls/: RemoveTheWalls_Schulmpf.cpp
ADT/SetChunkFlags/: SetChunkFlags.cpp
ADT/ZoneMasher/: gridPanel.h  libraries.h  resource.rc  wxTestApp.cpp  wxTestMain.h
BLP/UVtoPNG/: Readme.txt
DBC/: Readme.md
M2/3DSTexMover/: modelheaders.h  readme.txt
M2/AddViewDistance/: readme.txt
M2/Cata to Wrath Converter/: m2.py  wowfile.py
M2/CollisionAdder/: main.cpp
M2/JWoWModelViewer/: .classpath  .project
M2/LayerAdder/: LayerAdder_Cryect.cpp
M2/LightAdder/: lightadder.h
M2/RibbonAdder/: readme.txt  ribbonadder.h
M2/SearchAnimBones/: main.cpp
M2/ShowKeyBones/: main.cpp
MPQ/MPQPackScript/: replace.bat
Patches/: Readme.md
Patches/Darker Nights/: DarkerNights_Patch.MPQ  LightIntBand.dbc  README.txt
Tools/ADT/Ground Doodad Fixing/4-14-12/src/: CMakeLists.txt  main.cpp
Tools/ADT/Ground Doodad Fixing/4-14-12/src/utilities/: Utilities.h
Tools/ADT/Ground Doodad Fixing/4-14-12/src/wowfiles/: Chunk.cpp  MainChunk.cpp  Mcin.h  Mcnk.cpp  Mh2o.h  Mhdr.h  Wdt.h  WowChunkedFormat.cpp  WowChunkedFormat.h
Tools/ADT/Ground Doodad Fixing/4-14-12/src/wowfiles/alpha/: AdtAlpha.cpp  AdtAlpha.h  McnrAlpha.cpp  McnrAlpha.h  McvtAlpha.h  Monm.cpp  MphdAlpha.cpp  WdtAlpha.cpp  WdtAlpha.h
Tools/ADT/Ground Doodad Fixing/4-14-12/src/wowfiles/cataclysm/: AdtCata.h  AdtCataTextures.cpp  AdtCataTextures.h  McnkCata.cpp  McnkCata.h  McnkCataObjects.h  McnkCataTextures.h  McnrCata.cpp
Tools/ADT/Ground Doodad Fixing/4-14-12/src/wowfiles/lichking/: AdtLk.cpp  AdtLk.h  McnkLk.cpp  McnrLk.cpp  McnrLk.h
Tools/Analysis and Development/: Readme.md
Tools/BLP/: Readme.md
Tools/M2/: Readme.md
Tools/M2/LKBC_Converter/8-14-15 (latest -- non version)/: .gitignore  CMakeLists.txt  Doxyfile.in  Frog.m2  Frog00.skin  FrogGenuine.m2  compile
Tools/M2/LKBC_Converter/8-14-15 (latest -- non version)/include/: bc_model.h  colors.h  common.h  conversion.h  fallback.h  fcaseopen.h  lk_model.h  printer.h  reading.h  writing.h
Tools/M2/LKBC_Converter/8-14-15 (latest -- non version)/src/: .gitignore  common.c  conversion.c  fallback.c  fcaseopen.c  lkbc_converter.c  printer.c  reading.c  writing.c
Tools/M2/LKBC_Converter/8-14-15 (latest -- non version)/tests/: .gitignore  UDummy.c  do_test.cmake  dummy.exp  hash.sh  make-tests.sh  tests.cmake
Tools/MPQ/: Readme.md
Tools/Misc/: Readme.md
Tools/Misc/GruulMe/: CMakeLists.txt  Chunk.cpp  Chunk.h  Utilities.cpp  Utilities.h  Wdt.cpp  Wdt.h  Window.cpp  Window.h  adtarray.cpp  adtarray.h  adtarrayscene.cpp  adtarrayscene.h  gruulme.icns  gruulme.pro  main.cpp
Tutorials and Gudes/: Readme.md
Tutorials and Gudes/0.1 - Basics and Introduction/: Overview.md
Tutorials and Gudes/Modeling and Animation/: Basic Texture Animations.md  Convert MDX to M2.md  Custom WMO Survival Kit.md  How WoD Skin Works.md  Import M3 Heroes of the Storm to Blender.md  Importing Custom Models.md  Model Editing with PyM2.md  Ripping Vanilla Alpha Models.md
Tutorials and Gudes/Texturing and 2D Art/: Advanced Tileset Specular Mapping.md  Changing Login Screen Background.md  (+3 more)
WDB/: Readme.md
WMO/: Readme.md
(+1298 files in other folders)
